--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,11 @@
 .header--container {
     display: flex;
-    height: 50px;
+    height: 40px;
     align-items: center;
     margin: 20px;
 }
 
 .header--icon {
-    height: 60p;
+    height: 60px !important;
+    
 }
