--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,25 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+nav {
+  display: contents;
+}
 
+.css-k008qs {
+  display: block !important;
+}
+
+.nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColor);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -180,7 +198,7 @@
 }
 
 .testimonialsCard--container {
-  margin-top: 40px;
+  margin: 60px 0;
 }
 
 .testimonials--component {
@@ -217,10 +235,74 @@
 }
 
 /* CONTACT -- Comments field */
-/* .css-dpjnhs-MuiInputBase-root-MuiOutlinedInput-root {
+.css-dpjnhs-MuiInputBase-root-MuiOutlinedInput-root {
   width: 58.5ch !important;
-} */
+}
+.css-1hof3tc {
+  width: 58.5ch !important;
+}
+
+.contact--container {
+  background: #efefef;
+  padding: 20px 0;
+}
+
+.contact--form {
+  width: 40%;
+}
+
+.contact--information {
+  width: 40%;
+  margin-top: 10px;
+}
 @media screen and (max-width: 480px) {
+  .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    transition: 1s;
+    transform: translateY(-100vh);
+    z-index: 999;
+    background: white;
+  }
+
+  .css-8atqhb {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  .responsive--nav {
+    transform: none;
+  }
+
+  .css-heg063-MuiTabs-flexContainer {
+    display: block !important;
+  }
+
+  .MuiTabs-flexContainer /* css-k008qs */ {
+    display: block;
+  }
+  .tab--item {
+    display: block !important;
+  }
+  .nav-close-btn {
+    top: 2rem;
+    right: 2rem;
+  }
+
   .serviceCard--container {
     height: unset !important;
   }
@@ -263,5 +345,62 @@
   }
   .testimonials--component {
     margin-bottom: 30px;
+  }
+
+  .css-dpjnhs-MuiInputBase-root-MuiOutlinedInput-root {
+    width: 33.9ch !important;
+  }
+
+  .textField--input {
+    width: 30ch !important;
+  }
+  .contact--form {
+    width: 80% !important;
+    margin: 0 25px;
+  }
+
+  .contact--container {
+    width: 100%;
+    display: block;
+  }
+  .contact--component {
+    display: block !important;
+  }
+  .contact--information {
+    margin: 0 35px;
+    width: 80%;
+    display: block;
+  }
+
+  .submit--button {
+    width: 100% !important;
+    height: 50px !important;
+  }
+
+  .css-1dydd9z-MuiPaper-root {
+    display: block !important;
+  }
+
+  .css-1tph7h9-MuiSvgIcon-root {
+    position: relative !important;
+    top: 5px;
+  }
+
+  .css-18wpqyn-MuiSvgIcon-root {
+    position: relative;
+    top: 5px;
+  }
+
+  .css-crw0rw {
+    display: block !important;
+  }
+
+  .css-a3i9r6 {
+    position: relative;
+    top: 5px;
+  }
+
+  .css-1hof3tc {
+    width: 34ch !important;
   }
 }
