--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ nav {
 }
 
 .backgroundImage--component {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url('./images/PromoFoto.jpeg');
   background-size: cover;
   background-position: center;
