--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,8 @@ nav {
 }
 
 .backgroundImage--component {
-  background-image: /* linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), */ url(./images/PromoFoto.jpeg) !important;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/PromoFoto.jpeg) !important;
   background-size: cover;
   background-position: center;
   color: #fff;
