AboutUs style added

--- a/src/App.css
+++ b/src/App.css
@@ -377,6 +377,20 @@ nav {
     margin-top: 10px !important;
   }
 
+  /*   .aboutUs--text > .orange-text {
+    color: #eb8611 !important;
+  }
+
+  .aboutUs--text > .blue-text {
+    color: #1d70b7;
+  }
+  .aboutUs--text > .green-text {
+    color: #39b3ad;
+  }
+  .aboutUs--text > .violet-text {
+    color: #9a42b1;
+  } */
+
   .serviceCard--container {
     height: unset !important;
     height: unset !important;
